--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <section>
     <h2>Get in Touch</h2>
     <p>
-      Have a project in mind or need engineering leadership? <a href="#" data-email="andy DOT principe AT gmail DOT com">Send me an email</a>
+      Have a project in mind or need engineering leadership? <a href="#" data-email="andy DOT principe AT gmail DOT com">Send an email now!</a>
     </p>
   </section>
 
