updates image route

--- a/living-system/index.html
+++ b/living-system/index.html
@@ -40,7 +40,7 @@ const NODES = 20;
    LOGO
 ========================= */
 const logoImg = new Image();
-logoImg.src = "./A-logo-transparent.png";
+logoImg.src = "../A-logo-transparent.png";
 let logoReady = false;
 logoImg.onload = () => logoReady = true;
 
