adds metadata to living-system

--- a/living-system/index.html
+++ b/living-system/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="author" content="axprin">
+<meta name="description" content="Software development based in Nashville, TN.">
+<meta property="og:title" content="axprin">
+<meta property="og:description" content="Software development based in Nashville, TN.">
+<meta property="og:image" content="https://axprin.github.io/logo.png">
+<meta property="og:url" content="https://axprin.github.io/">
+<meta property="og:type" content="website">
+
+<link rel="icon" type="image/x-icon" href="../axprin_A_icon_32.ico" />
 <title>living system</title>
 <style>
 html, body {
